<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFF90">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFF90"
        android:backgroundTint="#CCFF90"
        android:orientation="vertical"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        tools:context=".SetupFrag">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:text="@string/setup_screen"
            android:textColor="#000000"
            android:textSize="25dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/carter_one"
                android:text="Copy and Paste Your Review URLs Below"
                android:textColor="#000000" />
        </TableRow>

        <TableLayout
            android:layout_width="393dp"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:background="#FFFFFF"
                android:backgroundTint="#3C6A6A6A">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#CCFF90"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:text="@string/google_review_link"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/GoogleURL"
                    android:layout_width="wrap_content"
                    android:layout_height="48sp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:ems="10"
                    android:hint="@string/google_my_business_url"
                    android:includeFontPadding="false"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#737373" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:backgroundTint="#3C6A6A6A">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#CCFF90"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:text="@string/facebook_review_link"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/FacebookURL"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:ems="10"
                    android:hint="@string/facbook_url"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#737373" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:backgroundTint="#3C6A6A6A">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#CCFF90"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:text="@string/yelp_review_link"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/YelpURL"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:backgroundTint="#000000"
                    android:backgroundTintMode="src_in"
                    android:hint="@string/yelp_url"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#737373"
                    android:textColorLink="#FFFFFF" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/clickToGetInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:background="#82B1FF"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="Click Here for Instructions on \nHow to Find Your Review Links"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/shortenLinks"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_marginEnd="30sp"
                android:checked="true"
                android:fontFamily="@font/carter_one"
                android:text="@string/shorten_links"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/doNotShortenLinks"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:fontFamily="@font/carter_one"
                android:text="@string/do_not_shorten_links"
                android:textColor="#000000"
                android:textColorHint="#000000" />
        </RadioGroup>

        <EditText
            android:id="@+id/defaultMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:backgroundTint="#3C6A6A6A"
            android:fontFamily="@font/carter_one"
            android:gravity="clip_horizontal"
            android:hint="@string/hi_please_leave_a_review_for_my_business"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:textColorHint="#737373" />
        <EditText
            android:id="@+id/remindMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:backgroundTint="#3C6A6A6A"
            android:fontFamily="@font/carter_one"
            android:gravity="clip_horizontal"
            android:hint="@string/enter_default_reminder_message"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minLines="4"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:textColorHint="#737373"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#82B1FF"
            android:fontFamily="@font/carter_one"
            android:text="@string/save"
            android:textSize="20sp" />

    </LinearLayout>


</ScrollView>