<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFF90"
    android:orientation="vertical"
    tools:context=".HomeScreen">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_weight="1.5"
        android:fontFamily="@font/carter_one"
        android:gravity="center"
        android:text="@string/review_quest"
        android:textColor="#000000"
        android:textSize="60sp" />

    <Button
        android:id="@+id/sendReviewButton"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_gravity="center"
        android:layout_margin="50sp"
        android:layout_weight="3"
        android:backgroundTint="#82B1FF"
        android:fontFamily="@font/carter_one"
        android:text="@string/send_reviews"
        android:textColorHighlight="#C5CAE9"
        android:textSize="20sp" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_gravity="center"
        android:layout_margin="50sp"
        android:layout_weight="3"
        android:backgroundTint="#82B1FF"
        android:fontFamily="@font/carter_one"
        android:text="Review History"
        android:textSize="20sp" />

    <Button
        android:id="@+id/SetupButton"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_gravity="center"
        android:layout_margin="50sp"
        android:layout_weight="3"
        android:backgroundTint="#82B1FF"
        android:fontFamily="@font/carter_one"
        android:text="@string/setup"
        android:textSize="20sp" />

</LinearLayout>